# jito-tip-router

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
generated_merkle_tree/: Cargo.toml
generated_merkle_tree/src/: generated_merkle_tree.rs  lib.rs  stake_meta_generator.rs
integration_tests/tests/tip_router/bpf/: set_merkle_root.rs
lib/: config.sh
meta_merkle_tree/: Cargo.toml
meta_merkle_tree/src/: generated_merkle_tree.rs  lib.rs  meta_merkle_tree.rs
tip-router-operator-cli/: Cargo.toml
tip-router-operator-cli/scripts/: download-tda.sh  setup-test-ledger.sh
tip-router-operator-cli/scripts/tests/fixtures/: local_validators.txt
tip-router-operator-cli/src/: cli.rs  create_stake_meta.rs  error.rs  ledger_utils.rs  lib.rs  main.rs  merkle_root_generator_workflow.rs  merkle_root_upload_workflow.rs  process_epoch.rs  stake_meta_generator.rs  stake_meta_generator_workflow.rs
tip-router-operator-cli/tests/: integration_tests.rs
tip-router-operator-cli/tests/fixtures/: local_validators.txt
tip-router-operator-cli/tests/fixtures/accounts/: 2rnDMvRuvdq9QTViEziTPmSof7JqsdFjajfGUgcqX2pN.json  2z4wzY1KgeqEuViJowroygn9bvqnwRNtZZrJrfmEUgw1.json  43MyxfcGxjD8dQB2VLUxgSmYvmMCNfguVktFhJhkLaBN.json  4TU5c52LcAebsYyKVn3X1LWwk5Yzrd3xuaY4qr6FZrWZ.json  5LNHRFzXoDanp6UfaF2kuySsovad7aV6KxGNgA9K6DFp.json  6Q97r5S7uN8wT5dozQ1XaU5ENUuCHVdP57T3WMEPA8W.json  76hRaCTRMFPMjnfW8LxuppWsXP7CytJeKc4FHmpvyeX2.json  7wzcTA3LHUVFVRox1P8Srz3Lvxna7iikgK3ynzgQkQAy.json  9Tv2QbZAeyinG4KmUwEH8RsN6MEa8PYAeBdNBhGZDxsY.json  (+23 more)
tip_payment_sdk/: Cargo.toml
tip_payment_sdk/src/: lib.rs
(+79 files in other folders)
