[package]
name = "generated-merkle-tree"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
im = "15.1"
itertools = "0.11"
jito-tip-distribution-sdk = { workspace = true }
jito-tip-payment-sdk = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-accounts-db = { workspace = true }
solana-client = { workspace = true }
solana-ledger = { workspace = true }
solana-program = { workspace = true }
solana-runtime = { workspace = true }
solana-stake-program = { workspace = true }
solana-vote = { workspace = true }
thiserror = { workspace = true }
